# single-repo-agent-sdlc-workflow

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/workflows/: sdlc-workflow.js
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e4b7610590cb_initial_schema.py
backend/app/: auth.py  box_score.py  brackets.py  db.py  dividends.py  game_scheduling.py  main.py  models.py  notifications.py  objective_engine.py  portfolio.py  pricing.py  reveal.py  season.py  seed.py  team_scoring.py  timeentry.py  trading.py  weekly_wrap.py
backend/docs/: er-diagram.md
backend/tests/: test_app.py  test_auth.py  test_box_score.py  test_brackets.py  test_clients.py  test_dividends.py  test_game_scheduling.py  test_main_brackets.py  test_main_games.py  test_main_portfolio.py  test_main_timeentry.py  test_main_weekly_wrap.py  test_models.py  test_notifications.py  test_objective_engine.py  test_portfolio.py  test_pricing.py  test_reveal.py  test_season.py  test_seed.py  test_team_scoring.py  test_timeentry.py  test_trading.py  test_weekly_wrap.py
backlog/backlog/: config.yml
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
e2e/tests/: brackets.spec.ts  health-status.spec.ts  morning-projection.spec.ts  portfolio.spec.ts  scoreboard.spec.ts  weekly-calendar.spec.ts  weekly-wrap-and-nudge.spec.ts
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  Brackets.tsx  (+20 more)
(+84 files in other folders)
